2004-11-09  Pavel S. Shirshov  <me@pavelsh.pp.ru>

        * include/slang.h (SLang_Version): Delete const qualifier for
	compatibility with system slang library.
        * slmisc.c: Likewise.

	* sldisply.c (tt_sprintf): Import last changes from libslang-current.
	Add code to check for a buffer overflow.
	(tt_printf): Likewise.
	(forward_cursor): Likewise.

	From: John E. Davis <davis@space.mit.edu>

2004-11-08  Andrew V. Samoilov  <sav@bcs.zp.ua>

        * include/slang.h (SLang_Version): Declare const.
        * slmisc.c: Add SLang_Version.

2004-11-01  Pavel S. Shirshov  <me@pavelsh.pp.ru>

	* README: Imported slang-1.4.9.
	* sldisply.c: Likewise.
	* slerr.c: Likewise.
	* slgetkey.c: Likewise.
	* slmisc.c: Likewise.
	* slsignal.c: Likewise.
	* slsmg.c: Likewise.
	* sltermin.c: Likewise.
	* slutty.c: Likewise.
	* slvideo.c: Likewise.
	* slw32tty.c: Likewise.
	* include/_slang.h: Likewise.
	* include/jdmacros.h: Likewise.
	* include/sl-feat.h: Likewise.
	* include/slang.h: Likewise.
	* include/slinclud.h: Likewise.
	* include/sllimits.h: Likewise.

2004-10-27  Nerijus Baliunas  <nerijus@users.sourceforge.net>

	* include/slang.h: Define __unix__ if _AIX is defined.
	Needed on AIX.

2004-10-14  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* sldisply.c (tt_sprintf): Add missed break.
	* sldisply.c (SLtt_erase_line): Use tt_write() instead
	tt_write_string().

2004-09-26  Mike Gorchak  <mike@malva.ua> 

	* sldisplay.c (SLtt_goto_rc): Disable cursor movement optimizations
	for qansi-m consoles. Needed on QNX Neutrino.
	(SLtt_initialize): Init QANSI_Console variable.

2004-09-24  Roland Illig  <roland.illig@gmx.de>

	* slsignal.c (SLsystem): Replaced NULL with (char *) NULL in
	call to execl.

	From patches from the OpenBSD ports collection.

2004-09-04  Pavel S. Shirshov  <me@pavelsh.pp.ru>

	* sltermin.c (): Avoid strncpy, home_ti is 1K long and 
	nobody really needs it whole cleared

2004-08-31  Pavel S. Shirshov  <me@pavelsh.pp.ru>
